# innovation2

./: .env.example  .gitignore  README.md  desktop.ini  docker-compose.yml  init_club_admin.sql  init_simple.sql  init_test_data.sql  init_user.sql  kill-port-8082.bat  program vibe codeing.txt  作品说明文档-完整版.md  作品说明文档-比赛版.md  作品说明文档.md  启动指南.md
.claude/: settings.local.json
campus-ai/: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.worker  LICENSE  README.md  demo_mock_data.py  docker-compose.prod.yml  main_simple.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
campus-ai/cli_test_data/: activities.csv  participation.csv  students.csv
campus-ai/demo_output/: activities.csv  clubs.csv  participation.csv  students.csv
campus-ai/models/forecasting/: 23ea407b4e5b.joblib  2a54fc8895be.joblib  metadata.json
campus-ai/monitoring/dashboards/: .gitkeep
campus-ai/src/: main.py
campus-ai/src/api/: health.py
campus-ai/src/api/v1/: __init__.py  algorithms.py
campus-ai/src/api/v3/: __init__.py  clustering.py  evaluation.py  forecasting.py  nlp.py  scheduling.py  tasks.py
campus-ai/src/association/: __init__.py  apriori_miner.py
campus-ai/src/core/: __init__.py  config.py  dependencies.py  exceptions.py  fast_explainer.py  image_analyzer.py  lifespan.py  monitoring.py  nlp_analyzer.py  scalable_pipeline.py  student_trajectory.py
campus-ai/src/data/: db_loader.py
campus-ai/src/data/mock/: README.md  __init__.py  campus_rhythm.py  cli.py  conflict_injector.py  dirty_data_injector.py  personas.py  smart_data_generator.py
campus-ai/src/evaluation/: __init__.py  ahp_evaluator.py  fuzzy_evaluator.py
campus-ai/src/forecasting/: __init__.py  memory_efficient_forecaster.py
campus-ai/src/forecasting/models/: __init__.py  arima_forecaster.py  lstm_forecaster.py  random_forest_forecaster.py
campus-ai/src/models/: dto.py  schemas.py
campus-ai/src/monitoring/: __init__.py  drift_detector.py  metrics.py
campus-ai/src/scheduling/: __init__.py  hierarchical_scheduler.py  models.py
campus-ai/src/scheduling/genetic/: __init__.py  ga_scheduler.py
campus-ai/src/tasks/: __init__.py  celery_app.py  clustering_tasks.py  forecasting_tasks.py  scheduling_tasks.py
campus-ai/src/tests/: conftest.py
campus-ai/src/tests/unit/: test_clients.py  test_core.py  test_data_processor.py  test_models.py
campus-ai/src/utils/: data_processor.py  logging_config.py  oss_client.py  spring_client.py
campus-ai/tests/data/mock/: __init__.py  test_campus_rhythm.py  test_conflicts.py  test_dirty_data.py  test_personas.py  test_smart_generator.py
campus-ai/tests/integration/: test_api_v3.py  test_celery_tasks.py
campus-ai/tests/unit/: test_drift_detector.py  test_fast_explainer.py  test_hierarchical_scheduler.py  test_memory_forecaster.py  test_scalable_pipeline.py
campus-ai/tests/unit/association/: test_apriori_miner.py
campus-ai/tests/unit/evaluation/: test_ahp_evaluator.py  test_fuzzy_evaluator.py
campus-ai/tests/unit/forecasting/: test_forecasting_models.py
campus-ai/tests/unit/scheduling/: test_ga_scheduler.py
campus-club-frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
campus-frontend/: .env.example  .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml
campus-frontend/scripts/: build.sh  deploy.sh
campus-main/: Dockerfile  cleanup_flyway.sql  mvnw  mvnw.cmd  pom.xml
campus-main/scripts/: init-database.sql
docs/: README.md  admin-frontend-guide.md
docs/api/: README.md
docs/database/: README.md
docs/deployment/: README.md
docs/development/: PROJECT_COMPLETION_GUIDE.md
docs/development/ai/: README.md
docs/development/backend/: README.md
docs/development/frontend/: README.md
docs/tdd-evidence/: task4-tdd-process.md
docs/tech-debt/: CRITICAL_ISSUES.md
src/utils/: data_processor.py
(+178 files in other folders)
